# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the script broadcast-wake-on-lan that wakes systems from sleep
  by sending a Wake On Lan packet. [Patrik]

o [NSE] Added the script http-unsafe-output-escaping that checks if parameter
  contents are reflected in responses, aiding in discovering potential XSS
  vulnerabilities. [Martin Swende]

o Made a syntax change in the zenmap.desktop file for compliance with
  the XDG standard. [Frederik Schwarzer]

o [NSE] Added the script http-grep that attempts to match web pages and urls
  against a given pattern. [Patrik]

o [NSE] Added stop function to crawler so that scripts can properly shutdown
  the crawler in case they want to end early. [Patrik]

o [NSE] Fixed issue in path encoding in the http-backup-finder script. [Patrik]

o [NSE] Added the script http-backup-finder that searches for backup copies
  of files discovered by crawling a website. [Patrik]

o [NSE] Added getLimitations function to httpspider that returns any 
  limitations imposed on the crawler. [Patrik]

o [NSE] Modified the httpspider library to prefetch links in the queue and
  change how script arguments are processed. Script and library arguments are
  now processed from within the library. [Patrik]

o The --exclude and --excludefile options can be used together now. [David]

o [NSE] Added the script http-apache-negotiation that detects if the Apache
  module mod_negotiate is enabled. [Hani Benhabiles]

o [NSE] Applied patch that corrects an issue where the http-method-tamper
  script would fail to properly detect JBoss servers vulnerable to the
  CVE-2010-0738 vulnerability. [Hani Benhabiles]

o [NSE] Added a new httpspider library and the script http-email-harvest that
  collects e-mail addresses by spidering a website. [Patrik]

o [NSE] Added support for detecting whether a http connection was established
  using SSL or not by the http.lua library [Patrik]

o [NSE] Applied patch that replaces a number of GET requests to HEAD in http-