@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added support for forcing scripts to run agains certain ports by adding
+  a plus in front of the script name. [Martin Swende]
+
 o [NSE] Added the script broadcast-wake-on-lan that wakes systems from sleep
   by sending a Wake On Lan packet. [Patrik]
 
